AM_CFLAGS = --pedantic -Wall -std=c99 -O2
AM_LDFLAGS =

bin_PROGRAMS = demonize parse-args processes subprocess sysconf sysctl
demonize_SOURCES = demonize.c
parse_args_SOURCES = parse-args.c
parse_args_LDADD = -largp
processes_SOURCES = processes.c
subprocess_SOURCES = subprocess.c
sysconf_SOURCES = sysconf.c
sysctl_SOURCES = sysctl.c
