AM_CFLAGS = --pedantic -Wall -std=c99 -O2
AM_LDFLAGS =

bin_PROGRAMS = daemonize parse-args processes subprocess sysconf sysctl
daemonize_SOURCES = daemonize.c
parse_args_SOURCES = parse-args.c
parse_args_LDADD = -largp
processes_SOURCES = processes.c
subprocess_SOURCES = subprocess.c
sysconf_SOURCES = sysconf.c
sysctl_SOURCES = sysctl.c
